# ocmfet_client

./: .gitmodules  Pipfile  README.md  client-feedback.py  client-zero.py  client.py  config.py  main.py  pyproject.toml  requirements.txt
configs/: 16ch.yaml  default.yaml  ocmfet-2ch_f.yaml  ocmfet-2ch_z.yaml
gui/: AcqWindow.py  AnalysisWindow.py  ConfigDialog.py  Controller.py  ControllerWidget.py  DataDialog.py  DataProcessing.py  DataProcessingWidget.py  LiveWindow.py  MainWindow.py  Messanger.py  MsgWidget.py  MultiGraph.py  MultiGraphWidget.py  PlotDialog.py  SplashDialog.py  main_window.py  multi_graph.py  ocmfet_controller.py  widgets.py
gui/dialogs/: ConfigDialog.py  DataDialog.py  DownloadDialog.py  PlotDialog.py  SplashDialog.py
gui/widgets/: Controller.py  DataProcessing.py  Messanger.py  MultiGraph.py
network/: listeners.py  udp.py  udp_client.py
src/ocmfet_client/: __init__.py
src/ocmfet_client/configs/: default.yaml  ocmfet-2ch_f.yaml
src/ocmfet_client/gui/: AnalysisWindow.py  LiveWindow.py
src/ocmfet_client/gui/dialogs/: ConfigDialog.py  DataDialog.py  DownloadDialog.py  PlotDialog.py  SplashDialog.py
src/ocmfet_client/gui/widgets/: Controller.py  MultiGraph.py
src/ocmfet_client/network/: listeners.py
src/ocmfet_client/utils/: __init__.py  processing.py
utils/: data_processer.py  data_processing.py  formatting.py  processing.py
